fixed iconwrap margin

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -131,7 +131,7 @@ nav {
                 //     margin: 5px;
                 // }
 
-                margin: 10px;
+                margin: 5px;
                 background-color: rgb(0, 40, 87);
                 z-index: 20;
 
